--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,21 @@ ariadne==0.16.1
 click==8.1.3
 colorama==0.4.5
 Flask==2.2.2
+flask-marshmallow==0.14.0
+Flask-SQLAlchemy==3.0.0
 graphql-core==3.2.3
+greenlet==1.1.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+marshmallow==3.18.0
+packaging==21.3
+pyparsing==3.0.9
 python-dotenv==0.21.0
+six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==1.4.41
 starlette==0.20.4
 typing_extensions==4.3.0
 Werkzeug==2.2.2
