--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 marshmallow==3.18.0
+marshmallow-sqlalchemy==0.28.1
 packaging==21.3
 pyparsing==3.0.9
 python-dotenv==0.21.0
