--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ MarkupSafe==2.1.1
 marshmallow==3.18.0
 marshmallow-sqlalchemy==0.28.1
 packaging==21.3
+protobuf==3.20.1
+PyMySQL==1.0.2
 pyparsing==3.0.9
 python-dotenv==0.21.0
 six==1.16.0
